# vault-ai

./: package.json  tsconfig.json  vite.config.ts
.zed/: settings.json 
product-plan/: README.md
product-plan/data-shapes/: README.md
product-plan/design-system/: colors.json  fonts.md  tailwind-colors.md  tokens.css  typography.json
product-plan/instructions/incremental/: 01-shell.md  02-vault-home.md  03-notes-editor.md  04-ai-assistant.md  05-settings.md
product-plan/prompts/: section-prompt.md
product-plan/sections/ai-assistant/: sample-data.json  types.ts
product-plan/sections/notes-editor/: sample-data.json  types.ts
product-plan/sections/settings/: sample-data.json  types.ts
product-plan/sections/vault-home/: sample-data.json  types.ts
product-plan/shell/components/: AIPanel.tsx  AppShell.tsx  CommandPalette.tsx  MainNav.tsx  index.ts
src/: index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  embeddings.rs  lib.rs  main.rs  models.rs  vector_store.rs
src-tauri/src/commands/: chat.rs  ingest.rs  notes.rs  pipeline.rs  search.rs  settings.rs  vault.rs
src/components/ai-assistant/: AIAssistant.tsx  ChatInput.tsx  ChatMessage.tsx  ThreadSidebar.tsx
src/components/notes-editor/: EditorFooter.tsx  EditorToolbar.tsx  NotesEditor.tsx  NotesList.tsx
src/components/settings/: LocalLLMPanel.tsx  Settings.tsx  (+2 more)
src/lib/: tauri.ts
src/routes/: __root.tsx  assistant.tsx  notes.tsx  settings.tsx  timeline.tsx  vault.tsx
(+34 files in other folders)
