[package]
name = "vault-ai"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vault_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }

# Vector DB (local, embedded)
usearch = "2"

# PDF parsing
pdf-extract = "0.7"

# Embeddings via candle (local, no Python needed)
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"

# File watching (live folder watch feature)
notify = "6"

# Encryption
ring = "0.17"

# Full-text search
tantivy = "0.22"

# SQLite for metadata
rusqlite = { version = "0.31", features = ["bundled"] }

tauri-plugin-opener = "2"
which = "6"
